--- a/10/Makefile
+++ b/10/Makefile
@@ -1,19 +1,21 @@
-KDIR=/lib/modules/$(shell uname -r)/build
-KBUILD=$(MAKE) -C $(KDIR) M=$(PWD)
+CC=gcc
+LDLD=ld
+LD=gcc
+CFLAGS=-Wall -O2 -g
+LDFLAGS=
+OBJCOPY=objcopy
 
-obj-m := pb173.o
+all: pb173 task.bin
 
-modules:
-	$(KBUILD) modules
+pb173: pb173.o
+
+task.bin: task
+	$(OBJCOPY) -O binary -j .text -j .rodata $< $@
+
+task: task.o task.x
+	$(LDLD) -s -T task.x -o $@ $<
 
 clean:
-	$(KBUILD) clean
-	@rm -f Module.symvers
+	rm -f *.o
 
-modules_install:
-	$(KBUILD) modules_install
-
-cscope:
-	cscope -b `find $(src) -type f -name '*.[ch]'`
-
-.PHONY: modules clean modules_install cscope
+.PHONY: all clean
